FIX : "카테고리 그룹 조회 API 수정"